tests/data/mini_script/valid/basics.ms
let x = 1 + 2 * 3;
let y = (x - 4) / 2;
print y;
x = x + 1;
x + y;
