tests/data/mini_script/invalid/hard_bad_expressions.ms
let a = 1 + ;
print (2 * );
if ! {
    print true;
}
